libkolab (0.5.0-1~1.gbp579016) UNRELEASED; urgency=low

  [ Paul Klos ]
  ** SNAPSHOT build @57901645e1037e340b9af5ab01c87bc388855d30 **

  * Imported Upstream version 0.5.0

  [ Diane Trout ]
  * Add libkolab0.symbols and supporting pkgkde-symbolshelper
    components

 -- Paul Klos <kolab@klos2day.nl>  Sun, 01 Dec 2013 13:47:45 +0100

libkolab (0.4.2-7) unstable; urgency=low

  * Fix saving of pictures to kabc resources (Closes: #721099)
    Upstream commit
    http://git.kolab.org/libkolab/
    commit/?id=fa19b0d21f3e064adbdff907f06cd15b2cb81d16

 -- Paul Klos <kolab@klos2day.nl>  Wed, 28 Aug 2013 20:20:39 +0200

libkolab (0.4.2-6) unstable; urgency=low

  * Disable rpath
  * Don't set LIB_INSTALL_DIR, it messes up the generated cmake module
  * Use generated Python dependencies for python-kolab
  * Add copyright section for generated cmake files
  * Remove unneccessary export
  * Install kolab.ini from debian/ dir
  * Simpler SWIG test
  * Update standards version
  * Remove unused-override hardening-no-fortify-functions
  * Exclude kdepim-runtime from shdeps
  * Streamline php-kolab install
  * Fix dependencies for libkolab-dev
  * Update changelog

 -- Paul Klos <kolab@klos2day.nl>  Mon, 12 Aug 2013 14:01:00 +0200

libkolab (0.4.2-5) unstable; urgency=low

  * Upload to Debian

 -- Paul Klos <kolab@klos2day.nl>  Fri, 24 May 2013 21:52:37 +0200

libkolab (0.4.2-4) unstable; urgency=low

  * Remove leftovers from dual build
  * Create shlibs from rules (not static file)
  * Remove obsolete conflicts
  * Add separate copyright for debian/*
  * Update changelog

 -- Paul Klos <kolab@klos2day.nl>  Mon, 13 May 2013 22:27:24 +0200

libkolab (0.4.2-3) unstable; urgency=low

  * Revert to single build, depend only on kdepimlibs.
  * Update changelog

 -- Paul Klos <kolab@klos2day.nl>  Tue, 23 Apr 2013 20:45:12 +0200

libkolab (0.4.2-2) unstable; urgency=low

  * Update changelog
  * Depend on libkolabxml0 (>= 0.8.4)
