@@ -1,5 +1,7 @@
 #!/usr/bin/make -f
 
+include /usr/share/dpkg/architecture.mk
+
 PHPAPI := $(shell php-config --phpapi)
 PYTHON_SITEARCH := $(shell python -c 'from distutils.sysconfig import get_python_lib; print get_python_lib(1)')
 
@@ -17,7 +19,9 @@ override_dh_auto_configure:
 		-DPHP4_EXECUTABLE=/usr/bin/php5 \
 		-DPHP4_INCLUDE_PATH=/usr/include/php5/ \
 		-DPYTHON_BINDINGS=ON \
-		-DPYTHON_INSTALL_DIR=$(PYTHON_SITEARCH)
+		-DPYTHON_INSTALL_DIR=$(PYTHON_SITEARCH) \
+		-DPYTHON_INCLUDE_DIR=/usr/include/python2.7 \
+		-DPYTHON_LIBRARY=/usr/lib/$(DEB_BUILD_MULTIARCH)/libpython2.7.so
 
 override_dh_gencontrol:
 	echo "php:Depends=phpapi-${PHPAPI}" >> debian/php-kolab.substvars
